# projetos-semanas-react

./: README.md
Minhas-Series/minhas-series/: db.sqlite  package.json
Minhas-Series/minhas-series/src/: App.js  Header.js  Home.js  InfoSeries.js  NovaSerie.js  Series.js  serviceWorker.js
nlw-proffy/: README.md
nlw-proffy/backend/: .env _ex  .gitignore  Insomnia_2020-08-07.json  pyproject.toml  scripts.py
nlw-proffy/backend/backend/: server.py
nlw-proffy/backend/backend/src/controllers/: classes_controller.py  connections_controller.py
nlw-proffy/backend/backend/src/database/: connection.py  migration_00_create_user_table.py  migration_01_create_classes_table.py  migration_02_create_classes_schedule_table.py  migration_03_create_connections_table.py
nlw-proffy/backend/backend/src/utils/: convert_hour_to_minutes.py
